# geom-nmf

./: LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
src/geo_nmf/: __init__.py
src/geom_nmf/: __init__.py  _base.py  _viz.py  core.py  endmembers.py  nfindr.py  plot.py  utils.py  weights.py
tests/: test_basics.py  test_model.py  test_python_package_template.py  test_viz.py
