[tool.poetry]
name = "geo-nmf"
version = "0.1.0"
description = ""
authors = ["David H. Hagan <david.hagan@quant-aq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = ">=1.21"
scikit-learn = ">=1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
sphinx = "^5.0"

[tool.poetry.group.coverage.dependencies]
pytest-cov = "^4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
